# SpringTibco-AI

./: .gitignore  README.md  pyproject.toml
outputs/: bash_script.sh  try.ipynb
outputs/fkash/: bash_script - Copy.sh  feedback - Copy.json
src/tibco_to_java/: crew.py  main.py
src/tibco_to_java/config/: agents.yaml  tasks.yaml
src/tibco_to_java/data/: tibco_credit_maintanence_project.txt
