[tool.poetry]
name = "tibco_to_java"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.85.0"}
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
tibco_to_java = "tibco_to_java.main:run"
train = "tibco_to_java.main:train"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
